objects/BMCServiceDesk__Survey__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Comments__c</fullName>
        <inlineHelpText>Any additional feedback you’d like to share with us?</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incident__c</fullName>
        <formula>BMCServiceDesk__FKIncident__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Response_Timeliness__c</fullName>
        <inlineHelpText>How responsive was the Service Desk?</inlineHelpText>
        <label>Response Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not responsive at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Satisfaction__c</fullName>
        <inlineHelpText>Did the assistance provided meet your satisfaction?</inlineHelpText>
        <label>Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not satisfied at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Desk_Performance__c</fullName>
        <inlineHelpText>How well did the Service Desk handle your request?</inlineHelpText>
        <label>Service Desk Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not well at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Staff_Effectiveness__c</fullName>
        <inlineHelpText>How would you rate the knowledge and attitude of the analyst?(1=Poor, 5=Outstanding)</inlineHelpText>
        <label>Staff Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SurveyFor__c</fullName>
        <formula>BMCServiceDesk__FKIncident__r.BMCServiceDesk__Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ToBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToBeDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dialogue_Quality__c</fullName>
        <description>Survey question measuring the quality of the dialogue/communication between the customer and IT.</description>
        <inlineHelpText>Please rate your dialogue/communication with IT personnel involved in resolving your incident (Both in writing and verbally).</inlineHelpText>
        <label>Dialogue Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Very Poor</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Quality__c</fullName>
        <description>Survey question measuring the quality of the resolution for the Incident.</description>
        <inlineHelpText>Please rate the quality of the resolution for your Incident (i.e. - was it professional and correct).</inlineHelpText>
        <label>Resolution Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Very Poor</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <description>Survey question measuring the amount of time it took to resolve the issue.</description>
        <inlineHelpText>Please rate the time it took to resolve your Incident.</inlineHelpText>
        <label>Resolution Time</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Very Poor</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>